# CHELSA_Download

./: .gitignore  LICENSE  README.md  chelsa-download  chelsa-download.example.toml  envicloud.conf  make_trace_lists.py  print_list_vars.py  pyproject.toml  rcloneCHELSA_present_AOI.py  rcloneCHELSAtrace_AOI.py
chelsa_download/: __init__.py  assets.py  cli.py  config.py  downloaders.py  list_manager.py  logging_utils.py  processing.py  rclone_helper.py
chelsa_download.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chelsa_download/data/: chelsa-download.example.toml  envicloud.conf
default_lists/: trace_bio01.txt.meta.json  trace_bio02.txt  trace_bio03.txt  trace_bio04.txt.meta.json  trace_bio05.txt  trace_bio07.txt  trace_bio09.txt.meta.json  trace_bio11.txt  trace_bio12.txt  trace_bio13.txt.meta.json  trace_bio14.txt  trace_bio16.txt  trace_bio17.txt.meta.json  trace_bio19.txt  trace_glz.txt  trace_orog.txt.meta.json  trace_scd.txt
default_lists/present/: present_bio01.txt  present_bio01.txt.meta.json  present_bio05.txt.meta.json  present_bio06.txt  present_bio07.txt  present_bio10.txt.meta.json  present_bio11.txt  present_bio12.txt  present_bio13.txt  present_bio13.txt.meta.json  present_bio14.txt  present_bio14.txt.meta.json  present_bio16.txt  present_bio16.txt.meta.json  present_bio17.txt  present_bio17.txt.meta.json  present_bio18.txt  present_bio19.txt.meta.json  present_scd.txt
lists/: trace_bio04.txt  trace_bio05.txt  trace_bio09.txt  trace_dem.txt  trace_glz.txt
tests/: test_lists.py  test_processing.py
(+57 files in other folders)
