[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chelsa-download"
version = "0.1.0"
description = "Unified CLI for downloading and processing CHELSA climate rasters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "geopandas>=0.13",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "numpy>=1.24",
    "xarray>=2023.7",
    "tomli; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
chelsa-download = "chelsa_download.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chelsa_download*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
